--- a/KiwiSploit.csproj
+++ b/KiwiSploit.csproj
@@ -56,6 +56,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KiwiSploit12.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KiwiSploit12.Designer.cs">
+      <DependentUpon>KiwiSploit12.cs</DependentUpon>
+    </Compile>
     <Compile Include="Functions.cs" />
     <Compile Include="KiwiSploit.cs">
       <SubType>Form</SubType>
@@ -65,6 +71,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sure.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Sure.Designer.cs">
+      <DependentUpon>Sure.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="KiwiSploit12.resx">
+      <DependentUpon>KiwiSploit12.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="KiwiSploit.resx">
       <DependentUpon>KiwiSploit.cs</DependentUpon>
     </EmbeddedResource>
@@ -77,6 +92,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Sure.resx">
+      <DependentUpon>Sure.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include=".editorconfig" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
