--- a/KiwiSploit.csproj
+++ b/KiwiSploit.csproj
@@ -32,12 +32,24 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>KiwiSploit.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AnemoAPI">
+      <HintPath>..\..\..\Downloads\Kiwi X\Kiwi X\Kiwi X\AnemoAPI.dll</HintPath>
+    </Reference>
     <Reference Include="EasyExploits">
       <HintPath>..\..\..\Downloads\FinlinSploit Premium\EasyExploits.dll</HintPath>
     </Reference>
     <Reference Include="FastColoredTextBox">
       <HintPath>..\..\..\Desktop\ex\FastColoredTextBox.dll</HintPath>
+    </Reference>
+    <Reference Include="KiwiModule">
+      <HintPath>..\..\..\Downloads\Kiwi X\Kiwi X\Kiwi X\KiwiModule.dll</HintPath>
+    </Reference>
+    <Reference Include="KrnlAPI">
+      <HintPath>..\..\..\Downloads\Kiwi X\Kiwi X\Kiwi X\KrnlAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -71,12 +83,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sure.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Sure.Designer.cs">
-      <DependentUpon>Sure.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="KiwiSploit12.resx">
       <DependentUpon>KiwiSploit12.cs</DependentUpon>
     </EmbeddedResource>
@@ -92,9 +98,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Sure.resx">
-      <DependentUpon>Sure.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include=".editorconfig" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -108,6 +111,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
